# jax-span

./: .gitignore  pyproject.toml
src/jax_span/: __init__.py  faddeeva.py  profiles.py
tests/: test_faddeeva.py  test_profiles.py  test_profiles_properties.py
