[project]
name = "jax-span"
version = "0.1.0"
description = "SPectral ANalysis (SPAN) using JAX"
readme = "README.md"
authors = [
    { name = "Kourosh", email = "kouroshrezaei90@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.10.2",
]


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
]
